--- a/vimb/.config/vimb/style.css
+++ b/vimb/.config/vimb/style.css
@@ -34,8 +34,9 @@
 }
 
 /* Display content in sans serif */
-p, li {
+p, li, dd {
 	font-family: sans-serif !important;
+	font-weight: normal !important;
 }
 
  @media DISABLED {
